--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,21 @@ a{
     color: white;
     background: linear-gradient(#0b004e, #1d152f, #002834);
 }
+.navbar{
+    opacity: 0;
+    animation: slideDown 1s ease-in-out 0.1s forwards;
+}
+.home{
+    opacity: 0;
+    animation: slideDown 1s ease-in-out 0.5s forwards;
+}
+.coin{
+    opacity: 0;
+    animation: slideDown 1s ease-in-out 0.1s forwards;
+}
+@keyframes slideDown{
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
